--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/Francescostefan1998/remake-benchmark-exam#readme",
   "dependencies": {
+    "cloudinary": "^1.33.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-list-endpoints": "^6.0.0",
@@ -29,6 +30,7 @@
     "fs-extra": "^11.1.0",
     "http-errors": "^2.0.0",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
