--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@ionic-native/file": "^5.36.0",
     "@ionic-native/file-opener": "^5.36.0",
+    "@sendgrid/mail": "^7.7.0",
     "cloudinary": "^1.33.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
@@ -31,9 +32,11 @@
     "fs": "^0.0.1-security",
     "fs-extra": "^11.1.0",
     "http-errors": "^2.0.0",
+    "json2csv": "^5.0.7",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "pdfmake": "^0.2.7",
+    "sendgrid": "^5.2.3",
     "uniqid": "^5.4.0",
     "zlib": "^1.0.5"
   },
